change some code

--- a/client/main.html
+++ b/client/main.html
@@ -25,13 +25,13 @@
     <input type="text" name="Input" id = "city" />
   </form>
 
-  <button class = "yes"     id = "dota">        Dota      </button>
+  <button class = "yes"     id = "langage">     Langage   </button>
   <button class = "yes"     id = "tondre">      Tondre    </button>
   <button class = "yes"     id = "peindre">     Peindre   </button>
   <button class = "yes"     id = "cafe">        Cafe      </button>
-  <button class = "yes"     id = "LOL">         LOL       </button>
-  <button class = "yes"     id = "maths">       Math      </button>
-  <button class = "yes"     id = "sleeping">    Sleeping  </button>
+  <button class = "yes"     id = "arroser">     Arroser   </button>
+  <button class = "yes"     id = "maths">       Maths     </button>
+  <button class = "yes"     id = "monter">      Monter    </button>
   <button class = "yes"     id = "code">        Code      </button>
  <!-- <input type="checkbox" id = "checkbox">-->
   <br/>
